[tests] better assertions in `StringUtilTest`
GitOrigin-RevId: f2d4bc27653b215191aa996296e4f9a31feb12b9